Update 'go-wyyeureb' component image to: quay.io/rhtap_qe/go-wyyeureb:4a357ea66b44f216d333d08afcd12733c0b7b67b@sha256:fa8cde02562149776743dc730b7cf6150ad7d78a46641a1bec27f3c1c76273f8

--- a/components/go-wyyeureb/overlays/development/deployment-patch.yaml
+++ b/components/go-wyyeureb/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-wyyeureb
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-wyyeureb:4a357ea66b44f216d333d08afcd12733c0b7b67b@sha256:fa8cde02562149776743dc730b7cf6150ad7d78a46641a1bec27f3c1c76273f8
+          name: container-image
